--- a/RAG_MIMIC_LLM_FLP.ipynb
+++ b/RAG_MIMIC_LLM_FLP.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO23EVnsscJhINPbWizPc4s",
+      "authorship_tag": "ABX9TyPnsrRuPjUzRmJLNAyETyzy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1914,7 +1914,7 @@
       "cell_type": "code",
       "source": [
         "# Initialize the Hugging Face LLaMA model and tokenizer\n",
-        "HF_TOKEN = \"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\"\n",
+        "HF_TOKEN = \"hf_\"\n",
         "model_name = \"meta-llama/Meta-Llama-3-8B\"\n",
         "tokenizer = AutoTokenizer.from_pretrained(model_name, token=HF_TOKEN)\n",
         "tokenizer.pad_token = tokenizer.eos_token"
